--- a/GD.FabricRedux/GD.FabricRedux.UX/index.html
+++ b/GD.FabricRedux/GD.FabricRedux.UX/index.html
@@ -5,6 +5,10 @@
     </head>
     <body>
         <div id="app"></div>
-        <script src="./bundle.js"></script>
+        <script src="./dist/bundle.js"></script>
+        <script type="text/javascript">
+            // Initialize the app
+            window.MyProject.init(null, "app");
+        </script>
     </body>
 </html>
